@startuml

title __CIRCUITSIM's Class Diagram__\n

  namespace circuit {
    class circuit.Battery {
    }
  }
  

  namespace circuit {
    class circuit.Circuit {
    }
  }
  

  namespace circuit {
    class circuit.CircuitBuilder {
    }
  }
  

  namespace circuit {
    abstract class circuit.Component {
    }
  }
  

  namespace circuit {
    class circuit.Editor {
    }
  }
  

  namespace circuit {
    class circuit.Lamp {
    }
  }
  

  namespace circuit {
    class circuit.Resistor {
    }
  }
  

  namespace circuit {
    class circuit.Switch {
    }
  }
  

  namespace circuit {
    class circuit.VisualComponent {
    }
  }
  

  namespace circuit {
    abstract class circuit.VisualEntity {
    }
  }
  

  namespace circuit {
    class circuit.VisualWireNode {
    }
  }
  

  namespace circuit {
    class circuit.WireNode {
    }
  }
  

  circuit.Battery -up-|> circuit.Component
  circuit.CircuitBuilder o-- circuit.Circuit : circuit
  circuit.Component -up-|> org.jgrapht.graph.DefaultEdge
  circuit.Editor -up-|> javafx.application.Application
  circuit.Lamp -up-|> circuit.Component
  circuit.Resistor -up-|> circuit.Component
  circuit.Switch -up-|> circuit.Component
  circuit.VisualComponent -up-|> circuit.VisualEntity
  circuit.VisualComponent o-- circuit.Component : component
  circuit.VisualEntity -up-|> javafx.scene.image.ImageView
  circuit.VisualWireNode -up-|> circuit.VisualEntity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
